[package]
name = "pudding-kernel"
version = "0.1.1"
edition = "2021"
authors = ["Ryuz <ryufuchi@gmail.com>"]
repository = "https://github.com/ryuz/pudding-kernel"
keywords = ["rtos", "zynq", "zynqmp", "cortex-r5"]
license = "MIT"

description = "RealTime-OS Kernel"


[dependencies]
#pudding-pac  = { path = "../pac"} 
#pudding-pac = {version="0.1.2", default-features=false}
pudding-pac    = { git = "https://github.com/ryuz/pudding-pac.git", branch="work" } 
bitflags = "2.2.1"
num = {version="0.4", default-features=false}

[build-dependencies]
cc = "1.0.36"

[features]
default = ["std"]
std=[]
pl390 = []
